--- a/src/content/blog/blog-3.mdx
+++ b/src/content/blog/blog-3.mdx
@@ -2,7 +2,7 @@
 title: "Astro 4.11"
 description: Astro 4.11 is out with custom 500 page improvements and Shiki transformers in the Code component.
 publishDate: "June 20, 2024"
-coverImage: "/src/content/blog/_images/blog-2/bee-watcher-logo.png"
+coverImage: "/src/content/blog/_images/blog-2/bee-watcher-logo.webp"
 coverGradient: "bg-[conic-gradient(var(--tw-gradient-stops))] from-pink-500 via-red-500 to-yellow-500"
 socialImage: "/src/content/blog/_images/astro-4110/header-astro-4.11.webp"
 lang: "en"
