--- a/src/content/blog/blog-2.mdx
+++ b/src/content/blog/blog-2.mdx
@@ -1,75 +1,68 @@
 ---
-title: "Astro 4.11"
-description: Astro 4.11 is out with custom 500 page improvements and Shiki transformers in the Code component.
-publishDate: "June 20, 2024"
+title: "La mujer en la Ciencia"
+description: El presente trabajo busca revisar la situación actual de la mujer en el ámbito científico.
+publishDate: "June 20, 2019"
+coverImage: "/src/content/blog/_images/blog-2/banner.webp"
 coverGradient: "bg-[conic-gradient(var(--tw-gradient-stops))] from-pink-500 via-red-500 to-yellow-500"
 socialImage: "/src/content/blog/_images/astro-4110/header-astro-4.11.webp"
 lang: "en"
 ---
 
-Learn more on each of these:
+El presente trabajo busca revisar la situación actual de la mujer en el ámbito científico. Se analizarán creencias culturales y prejuicios sociales, así como algunas políticas implementadas por instituciones que buscan lograr una mayor igualdad. También nos preguntamos sobre las condiciones en que el llamado “techo de cristal” afecta la actividad de las científicas de nuestro país.
 
-- [**Improvements to `500.astro`**](#improvements-to-500astro)
-- [**Shiki transfomers in the `<Code />` component**](#shiki-transfomers-in-the-code-component)
+A lo largo de la historia, la mujer ha sido relegada en la mayoría de las sociedades del mundo. Las diferencias entre el hombre y la mujer han sido de tal entidad que incluso hoy, en pleno siglo XXI y tras años de lucha, están lejos de desaparecer.
 
-To upgrade an existing project, use the automated `@astrojs/upgrade` CLI tool. Alternatively, upgrade manually by running the upgrade command for your package manager:
+En la ciencia la situación no ha sido distinta. Salvo contadas excepciones, las mujeres no pudieron acceder a una educación superior hasta mediados del siglo XIX, cuando tras largas luchas feministas lograron el ingreso a las universidades. Esto comenzó en Estados Unidos, se extendió luego a Europa y finalmente a América Latina a fines del siglo XIX. En nuestro país solo a partir de 1941 se cuenta con registros acerca de matrícula y titulación universitaria según sexo y carrera. (Palermo, 1998)
 
-```sh
-# Recommended:
-npx @astrojs/upgrade
+En la actualidad, si se observan los datos de egresados en la Argentina durante el periodo 2001-2015, se puede llegar a pensar que la ciencia ya ha dejado atrás las diferencias de género, ya que las mujeres graduadas representan el 61% del total de egresados. (Moguillansky y Mollo, 2015) Sin embargo, si analizamos su situación con mayor detenimiento, esta idea desaparece por completo. Las mujeres están lejos de lograr igualdad en los campos científicos, donde muchas veces a pesar de ser mayoría en la base de la pirámide jerárquica, comienzan a perder participación de forma notable conforme se sube en la misma.
 
-# Manual:
-npm install astro@latest
-pnpm upgrade astro --latest
-yarn upgrade astro --latest
-```
+## Un problema cultural
 
-## Improvements to 500.astro
+Hace ya tres años, la Asamblea General de Naciones Unidas del 2015, declaró el 11 de febrero como el Día Internacional de la Mujer y la Niña en la Ciencia. Entre las razones que motivaron esta decisión se encontraba la de poner en evidencia que la ciencia y la mujer no son incompatibles. Sin embargo, a pesar de estos esfuerzos, existen prejuicios arraigados culturalmente que obturan las posibilidades de desarrollo de las mujeres en la ciencia.
 
-[`src/pages/500.astro`](https://docs.astro.build/en/basics/astro-pages/#custom-500-error-page) is a special page file in Astro that allows you to handle [500](https://developer.mozilla.org/en-US/docs/Web/HTTP/Status/500) errors gracefully. A 500 error most commonly happens where there is a bug in your application; such as not wrapping delicate code in a `try/catch`. When component code throws, Astro catches and returns a 500 response. If you have `src/pages/500.astro` this page gets rendered into the response body.
+Existen estudios que demuestran que en general para la sociedad, el concepto de ciencia está asociado al género masculino. A modo de ejemplo, podemos citar tres estudios realizados en diferentes universidades.
 
-New in 4.11, `500.astro` now receives the `error` as a prop. This allows you to give more contextual information about the error.
+Anne Kerkhoven y su equipo realizaron un estudio en el que analizaron las imágenes de los libros de Ciencia online para niños de cuatro a once años. De las 1161 imágenes registradas, los hombres que aparecían como científicos eran el 75% frente al 25% de las mujeres. Entre los puestos no científicos los resultados fueron muy distintos, solo el 38% era ocupado por hombres y el 62% por mujeres. (Angulo, 2017)
 
-```astro
----
-interface Props {
-  error: unknown
-}
-const { error } = Astro.props
----
+Otro estudio, realizado en la Universidad de Illinois por Lil Bian, trabajó con 96 niños de entre 5 y 7 años a los que se les realizaron tres preguntas. Estas buscaban que los niños relacionaran la inteligencia, de forma directa e indirecta, con el sexo. A los 5 años tanto niñas como niños puntuaron mejor a su sexo, pero a partir de los 6 años las niñas comenzaron a seleccionar a los niños con mayor frecuencia. (Angulo, 2017)
 
-<html lang="en">
-<head>
-  <title>Server error - Custom 500</title>
-</head>
-<body>
-  <h1>Server error</h1>
-	<p>{error instanceof Error ? error.message : 'Unknown error'}</p>
-</body>
-</html>
-```
+En el estudio “Los sesgos de género de la facultad de ciencias favorecen a los estudiantes varones” (Pérez Iglesias, 2012), se les pidió a profesores de departamentos de ciencias de seis universidades norteamericanas que valorasen la solicitud presentada por un estudiante (John) o una estudiante (Jennifer) para ocupar un puesto de _lab manager_. La documentación evaluada por la totalidad de los participantes del estudio era la misma, únicamente el nombre del estudiante cambiaba. En total, la solicitud de Jennifer fue enviada a 63 catedráticos y la de John a 64. Estos debían valorar la competencia, contratabilidad y el nivel de tutorización del estudiante, además de indicar cuál era la remuneración que creían que debería asignársele al estudiante en función de los méritos anteriores. El resultado del estudio reflejó que, sin importar el sexo, edad, rango académico o campo científico de los evaluadores, Jennifer era peor evaluada en los tres rasgos, además de ser merecedora de una remuneración promedio 10% más baja que la del postulante varón.
 
-## Shiki transfomers in the Code component
+Estos estudios ponen en evidencia que, aún hoy en día existe en la sociedad la idea de que la mujer es incompatible con la ciencia. Es importante destacar que esta idea está presente, tanto en niños como niñas, desde una edad temprana. Esto representa sin lugar a dudas un obstáculo para el desarrollo de las mujeres dentro de carreras científicas, ya que las coloca en una situación en la que tienen que demostrar de manera constante que son igual de capaces que un hombre.
 
-Astro's built-in [`<Code />` component](https://docs.astro.build/en/reference/api-reference/#code-) is used to render syntax highlighted code blocks inside of Astro pages. The component uses [Shiki](https://shiki.style/) and supports all popular themes and languages. Now, you can also use [Shiki transformers](https://shiki.style/packages/transformers#shikijs-transformers) on the code blocks by passing the `transformers` prop:
+## El techo de cristal, una realidad también en la ciencia
 
-```astro
----
-import { transformerNotationFocus } from '@shikijs/transformers'
-import { Code } from 'astro:components'
-const code = `const foo = 'hello'
-const bar = ' world'
-console.log(foo + bar) // [!code focus]
-`
----
-<Code {code} lang="js" transformers={[transformerNotationFocus()]} />
-<style is:global>
-  pre.has-focused .line:not(.focused) {
-    filter: blur(1px);
-  }
-</style>
-```
+El término “techo de cristal” comenzó a utilizarse en los años 80 del siglo XX y describe las barreras “invisibles”, sutiles y difíciles de constatar, que dificultan el acceso de las mujeres a los puestos de mayor poder, prestigio o salario, en cualquier ámbito laboral y en cualquier país. (Guil Bozal, 2008:2)
 
-## More
+En la actualidad se puede decir que el techo de cristal está presente en la ciencia, tanto a nivel internacional, como nacional. En nuestro país, las mujeres ocupan más de la mitad de la planta docente universitaria nacional, sin embargo los puestos de mayor jerarquía son ocupados en un 62% por hombres, como cargos de titular, asociado y adjunto. En cuanto a los cargos de gobierno universitario la brecha es más notoria. Solo una de cada diez rectores de universidades nacionales del país es una mujer, y tres de cada diez vicerrectores son mujeres. (Informes 2017)
 
-As always, Astro 4.11 includes more bug fixes and smaller improvements that couldn't make it into this post! Check out the full [release notes](https://github.com/withastro/astro/blob/refs/heads/main/packages/astro/CHANGELOG.md#4110) to learn more. Special thanks to Sarah, Bjorn, Ema, Florian, [braebo](https://github.com/braebo) and everyone else who contributed to this release.
+Algunas científicas argentinas afirman que: “Si bien las mujeres en Argentina han copado muchos lugares en las universidades, en el Congreso Nacional de Investigaciones Científicas y Técnicas, [aún] en los cargos más altos no hay paridad, las mujeres son minoría”1.
+
+Uno de los motivos de estas situaciones tiene que ver sin duda con el hecho de que las científicas, a diferencia de los científicos, se ven obligadas a elegir entre su carrera o la maternidad. Diana Maffia afirma que: “Los 10 años más complicados de la trayectoria laboral son entre los 25 y 35 años. En esta etapa, hay que competir muchísimo y dedicarse con mucha intensidad al trabajo científico. La coincidencia con el periodo reproductivo de las mujeres hace que la mayoría postergue la maternidad o directamente no se la plantee”. En la década del 90, el 75% de las investigadoras superiores eran solteras, mientras que solo el 25% de los hombres eran solteros.2
+
+Por motivos como los anteriores es que se requiere llevar a cabo políticas como las del Conicet, donde se han producido cambios con el fin de alcanzar una mayor equidad. Entre estos cambios se encuentran: el aplazamiento de los informes cuando coincidan con el alumbramiento o la excepción de edades según el número de hijos.
+
+## Conclusión
+
+Luego de este breve acercamiento al tema expuesto, podemos afirmar que construir una carrera en la ciencia no significa el mismo esfuerzo para una mujer que para un hombre. Es cierto que en el último siglo la mujer ha comenzado a ganar espacio en el ámbito científico como nunca antes, no sin grandes esfuerzos y sacrificios. Sin embargo, aún hoy la mujer no goza de las mismas oportunidades que un hombre para desarrollar una carrera científica plena, lo que demuestra que todavía existen cambios que deben realizarse.
+
+El campo científico es un ambiente en el que de por sí existe una fuerte competencia sin importar el sexo. Sin embargo, una mujer que quiere desarrollar una carrera científica, debe superar muchos obstáculos adicionales, vencer prejuicios y tomar decisiones difíciles, que los hombres generalmente ni siquiera llegan a plantearse. Muchas veces, la mujer, a diferencia del hombre, se ve obligada a elegir entre su carrera o la posibilidad de crear una familia, por el simple hecho de que llevar a cabo ambas resulta incompatible siendo mujer.
+
+Frente a esta realidad, el Estado, junto con otras organizaciones, no debe caer en el error de creer que la situación actual de la mujer mejorará de manera natural con los años y por ello debe tomar un rol activo, llevando a cabo políticas públicas que brinden mayor apoyo a las mujeres. Estas políticas deben dar soluciones a los problemas que existen actualmente, permitiendo que las mujeres puedan desenvolverse en una carrera científica en igualdad de condiciones. Asimismo, es importante que las medidas que se adopten apunten a las generaciones más jóvenes, eliminando la concepción errónea de que la inteligencia depende del género, ya que es en estas futuras generaciones donde se encuentran las posibles científicas de mañana.
+
+La Ciencia debería ser un ejemplo de inclusión, para alcanzar una sociedad que no impida la dedicación, esfuerzo e imaginación de una persona por el simple hecho de ser mujer.
+
+## Bibliografía
+
+- Angulo, Eduardo (2017) “La mujer, la niña y la ciencia”, en Mujeres con ciencia.  
+  Disponible en: [https://mujeresconciencia.com/2017/02/17/la-mujer-la-nina-la-ciencia/](https://mujeresconciencia.com/2017/02/17/la-mujer-la-nina-la-ciencia/)
+- Guil Bozal, Ana (2008) “Mujer y Ciencia: techos de cristal”. En Eccos Revista Científica (en línea) 2009.
+  Disponible en http://www.redalyc.org/articulo.oa?id=71510111
+- Informes 2017 “La Educación Superior en la Argentina”. ATENEA – FEDUN
+  Disponible en https://fedun.com.ar/wordpress/wp-content/uploads/2018/03/La-Educaci%C3%B3n-Superior-en-Argentina.pdf
+- Moguillansky, María y Mollo Brisco, Gabriela (2015) “Mujeres directivas en las universidades nacionales argentinas”, en Revista Ciencias Administrativas, Año 3, N°5.
+  Disponible en http://sedici.unlp.edu.ar/handle/10915/46552
+- Palermo, Alicia (1998) “La participación de las mujeres en la Universidad”, en La Aljaba, segunda época. Vol. III, 1998. Universidad Nacional de La Pampa.
+  Disponible en http://www.biblioteca.unlpam.edu.ar/pubpdf/aljaba/v03a06palermo.pdf
+- Pérez Iglesias, Juan Ignacio (2012) “Sexismo en la ciencia: el caso de Jennifer y John”. En La Naturaleza Humana 2012
+  Disponible en https://blogs.eitb.eus/cienciayhumanismo/2012/11/25/sexismo-en-la-ciencia-el-caso-de-jennifer-y-john/
