--- a/src/content/blog/blog-5.mdx
+++ b/src/content/blog/blog-5.mdx
@@ -3,7 +3,7 @@ title: "Astro 4.11"
 description: Astro 4.11 is out with custom 500 page improvements and Shiki transformers in the Code component.
 publishDate: "June 20, 2024"
 coverGradient: "bg-[conic-gradient(var(--tw-gradient-stops))] from-pink-500 via-red-500 to-yellow-500"
-socialImage: "/src/content/blog/_images/astro-4110/header-astro-4.11.webp"
+socialImage: "/src/content/blog/_images/blog-2/bee-watcher-logo.webp"
 lang: "en"
 ---
 
