feat(blog-entry): :clown_face: mock for the last two blogs bee-watcher and reevolution-premiere

--- a/src/content/blog/first-os-contribution.mdx
+++ b/src/content/blog/first-os-contribution.mdx
@@ -2,6 +2,8 @@
 title: "My First Open Source Contribution: Catppuccin"
 description: I share my experience with my first open source project. I’ll talk about how I got involved with Catppuccin, the theme design for IDA Debugger, and the lessons I learned along the way.
 publishDate: "April 20, 2023"
+tags:
+  - "open-source"
 coverImage: "/src/content/blog/_images/first-os-contribution/cover-image.webp"
 coverGradient: "bg-[conic-gradient(var(--tw-gradient-stops))] from-green-300 via-blue-500 to-purple-600"
 cardImage: "/src/content/blog/_images/first-os-contribution/catppuccin-ida.webp"
@@ -9,7 +11,7 @@ socialImage: "/src/content/blog/_images/first-os-contribution/catppuccin-ida.web
 lang: "en"
 ---
 
-import BlogContentImage from "/src/components/BlogContentImage.astro";
+import BlogContentImage from "/src/components/Blog/BlogContentImage.astro";
 import portCreationDiagram from "/src/content/blog/_images/first-os-contribution/port-creation-diagram.webp";
 
 Hey everyone! 🎉 Today I'll share my experience with my first open source contribution. In this blog, I’ll talk about how I got involved with Catppuccin, a color theme for various applications, and the lessons I learned along the way.
