--- a/src/content/blog/gone.mdx
+++ b/src/content/blog/gone.mdx
@@ -2,6 +2,11 @@
 title: "Gone CLI: building a CLI with Cobra and Go"
 description: Gone is a command-line utility written in Go for comparing dates and calculating date differences. This is part of my "Go Developer Roadmap" and "Backend Developer Roadmap"
 publishDate: "June 20, 2024"
+tags:
+  - go
+  - cli
+  - "open-source"
+  - "backend"
 coverImage: "/src/content/blog/_images/gone/cover-image.webp"
 coverGradient: "bg-[conic-gradient(var(--tw-gradient-stops))] from-sky-400 to-blue-500"
 cardImage: "/src/content/blog/_images/gone/gone-cli.webp"
